<resources>
    <string name="app_name">BurgerMenuv2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BurgerMenu</string>
    <string name="nav_header_subtitle">BurgerMenu@bugerinc.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="item">Item</string>
    <string name="communication">Communication</string>
    <string name="about">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">FRAGMENT TEXT</string>
    <string name="categoOne">CATEGORY 1</string>
    <string name="CategoTwo">CATEGORY 2</string>
    <string name="CategoThree">CATEGORY 3</string>
    <string name="categoFour">CATEGORY 4</string>
</resources>
